// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`student membership mixed or > rows 1`] = `
[
  {
    "archived_at": null,
    "created_at": 103,
    "id": 103,
    "teacher_id": 2,
  },
  {
    "archived_at": null,
    "created_at": 102,
    "id": 102,
    "teacher_id": 2,
  },
  {
    "archived_at": null,
    "created_at": 101,
    "id": 101,
    "teacher_id": 2,
  },
  {
    "archived_at": null,
    "created_at": 4,
    "id": 4,
    "teacher_id": 1,
  },
]
`;

exports[`student membership mixed or > sql 1`] = `
[
  {
    "sql": "SELECT "id","teacher_id","archived_at","created_at" FROM "assignment" WHERE "archived_at" IS ? ORDER BY "created_at" desc, "id" asc",
    "table": "assignment",
  },
  {
    "calls": 2003,
    "sql": "SELECT "assignment_id","student_id","created_at" FROM "assignment_to_student" WHERE "assignment_id" = ? AND "student_id" = ? ORDER BY "assignment_id" asc, "student_id" asc",
    "table": "assignment_to_student",
  },
]
`;

exports[`student membership simple exists > rows 1`] = `
[
  {
    "archived_at": null,
    "created_at": 103,
    "id": 103,
    "teacher_id": 2,
  },
  {
    "archived_at": null,
    "created_at": 102,
    "id": 102,
    "teacher_id": 2,
  },
  {
    "archived_at": null,
    "created_at": 101,
    "id": 101,
    "teacher_id": 2,
  },
]
`;

exports[`student membership simple exists > sql 1`] = `
[
  {
    "sql": "SELECT "assignment_id","student_id","created_at" FROM "assignment_to_student" WHERE "student_id" = ? ORDER BY "assignment_id" asc, "student_id" asc",
    "table": "assignment_to_student",
  },
  {
    "calls": 3,
    "sql": "SELECT "id","teacher_id","archived_at","created_at" FROM "assignment" WHERE "id" = ? AND "archived_at" IS ? ORDER BY "created_at" desc, "id" asc",
    "table": "assignment",
  },
]
`;
